--- a/pom.xml
+++ b/pom.xml
@@ -4,21 +4,25 @@
 
 	<groupId>de.kla</groupId>
 	<artifactId>spring.bug.autowire</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<version>0.0.1</version>
 
 	<name>Spring Autowire Bug</name>
-	<url></url>
 
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>${java.version}</maven.compiler.source>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
 	</properties>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.3.RELEASE</version>
+		<version>1.3.8.RELEASE</version>
+		<!-- does not work -->
+		<!-- maybe because of the logback version? -->
+		<!-- <version>1.4.6.RELEASE</version> -->
+		<!-- <version>1.5.3.RELEASE</version> -->
 	</parent>
 
 	<dependencies>
@@ -31,13 +35,19 @@
 			<artifactId>spring-support</artifactId>
 			<version>2.0.6</version>
 		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>org.quartz-scheduler</groupId> -->
+		<!-- <artifactId>quartz</artifactId> -->
+		<!-- <version>2.2.1</version> -->
+		<!-- </dependency> -->
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
+			<groupId>org.opensymphony.quartz</groupId>
+			<artifactId>quartz</artifactId>
+			<version>1.6.1</version>
 		</dependency>
 		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-classic</artifactId>
+			<groupId>commons-collections</groupId>
+			<artifactId>commons-collections</artifactId>
 		</dependency>
 
 		<!-- Test dependencies -->
@@ -57,15 +67,11 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<target>${java.version}</target>
-					<source>${java.version}</source>
-				</configuration>
+				<artifactId>maven-surefire-plugin</artifactId>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
