--- a/pom.xml
+++ b/pom.xml
@@ -32,8 +32,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>spring-support</artifactId>
-			<version>2.0.6</version>
+			<artifactId>spring-context-support</artifactId>
+			<version>4.0.2.RELEASE</version>
 		</dependency>
 		<!-- <dependency> -->
 		<!-- <groupId>org.quartz-scheduler</groupId> -->
