--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
 			<artifactId>spring-context-support</artifactId>
 			<version>4.0.2.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
+			<version>4.0.2.RELEASE</version>
+		</dependency>
+
 		<!-- <dependency> -->
 		<!-- <groupId>org.quartz-scheduler</groupId> -->
 		<!-- <artifactId>quartz</artifactId> -->
